layout issues fixing

--- a/app/src/admin/trip-edit/sass/trip-option.scss
+++ b/app/src/admin/trip-edit/sass/trip-option.scss
@@ -918,6 +918,7 @@ div[aria-labelledby="0-itinerary"] {
 	overflow: auto;
 	left: -395px;
 	top: -90px;
+	width: 310px;
 }
 .components-base-control {
 	&.components-range-control {
